bin_PROGRAMS = unblur
unblur_SOURCES = \
core/dates_and_times.f90 \
core/program_instances.f90 \
core/globals.f90 \
external_libs/napack/sort2.f \
core/useful_functions.f90 \
core/string_manipulations.f90 \
core/user_supplied_parameters.f90 \
core/user_input.f90 \
external_libs/fftw3.3/fftw3.3.f90 \
core/histograms.f90 \
core/empirical_distributions.f90 \
core/peaks.f90 \
external_libs/netlib/gcvspl.f \
core/numeric_text_files.f90 \
core/curves.f90 \
core/image_header_records.f90 \
core/image_headers.f90 \
external_libs/libtiff/libtiff_helper_functions.c \
external_libs/libtiff/libtiff.f90 \
core/tiff_image_files.f90 \
core/image_files.f90 \
core/units.f90 \
core/contrast_transfer_functions.f90 \
core/orientations_and_rotations.f90 \
core/progress_bars.f90 \
core/images_core.f90 \
core/unblur_functions.f90 \
core/electron_dose.f90 \
core/ctffind_routines.f90 \
src/unblur.f90

include Makefile_common.am
